--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <h1>Impacto do Desmatamento</h1>
-<img src="foz-do-iguacu-capa2019-06.jpg ana" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
+<img src="foz-do-iguacu-capa2019-06.jpg ana" alt="Foto das Cataratas do Iguaçu, retirada da internet, um lugar com muitas árvores e mata nativa preservada.">
 <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
 <nav>
 <ul>
